fdo#78949 Handle (SAXParse-)Exception that can't pass getAllRelationships

...like it was already done in the similar else branch of
ReadRelInfoIfNecessary.  The call site at GetAllRelationshipsIfAny will
translate an m_nRelInfoStatus that remained RELINFO_NOT_INIT into an
IOException.

Change-Id: I79c601acd23b3b0020c7b4de4c20b0282524bce1